--- a/src/app/shakemap/metadata/input/input.component.html
+++ b/src/app/shakemap/metadata/input/input.component.html
@@ -10,13 +10,17 @@
 
       <dl class="description-table">
         <ng-container *ngFor="let name of rowOrder">
-          <dt *ngIf="smInput['event_information'][name]">{{ names[name] }}</dt>
-          <dd *ngIf="smInput['event_information'][name]">
-            {{ name === 'depth' ? smInput['event_information'][name] + ' km' : 
-                (name === 'longitude' || name === 'latitude') ? (smInput['event_information'][name] | sharedDegrees) : 
-                name === 'origin_time' ? (smInput['event_information'][name] | date:'medium') :
-                smInput['event_information'][name] }}
-          </dd>
+
+          <ng-container *ngIf="smInput['event_information'][name]">
+            <dt>{{ names[name] }}</dt>
+            <dd>
+              {{ name === 'depth' ? smInput['event_information'][name] + ' km' : 
+                  (name === 'longitude' || name === 'latitude') ? (smInput['event_information'][name] | sharedDegrees) : 
+                  name === 'origin_time' ? (smInput['event_information'][name] | date:'medium') :
+                  smInput['event_information'][name] }}
+            </dd>
+          </ng-container>
+          
         </ng-container>
       </dl>
 
