--- a/src/app/executive/executive/executive.component.html
+++ b/src/app/executive/executive/executive.component.html
@@ -20,6 +20,12 @@
       <executive-moment-tensor-pin [product]="momentTensor" class="pin-view">
       </executive-moment-tensor-pin>
     </li>
+    <li class="executive-summary-pin"
+        *ngIf="event.getProduct('focal-mechanism'); let focalMechanism">
+      <executive-focal-mechanism-pin [product]="focalMechanism"
+          class="pin-view">
+      </executive-focal-mechanism-pin>
+    </li>
   </ul>
 
   <shared-text-product
