--- a/src/app/shakemap/metadata/output/output.component.html
+++ b/src/app/shakemap/metadata/output/output.component.html
@@ -20,7 +20,9 @@
                       [class.mat-cell]="false"
                       class="mat-header-cell"
                       *matCellDef="let groundMotion">
+
             {{ names.groundMotions[groundMotion.type] }}
+            
           </mat-cell>
         </ng-container>
 
@@ -29,8 +31,9 @@
             Max Value in Grid
           </mat-header-cell>
           <mat-cell *matCellDef="let groundMotion">
-            {{ groundMotion.max_grid }} 
-            {{ groundMotion.units === 'intensity' ? 'mmi' : groundMotion.units }} 
+
+            {{ groundMotion.max_grid | sharedUnits:groundMotion.units }}
+
           </mat-cell>
         </ng-container>
 
@@ -39,8 +42,9 @@
             Max Value on Land
           </mat-header-cell>
           <mat-cell *matCellDef="let groundMotion">
-            {{ groundMotion.max }} 
-            {{ groundMotion.units === 'intensity' ? 'mmi' : groundMotion.units }} 
+
+            {{ groundMotion.max | sharedUnits:groundMotion.units }}
+
           </mat-cell>
         </ng-container>
 
@@ -49,7 +53,9 @@
             Bias
           </mat-header-cell>
           <mat-cell *matCellDef="let groundMotion">
+
             {{ groundMotion.bias }}
+
           </mat-cell>
         </ng-container>
 
@@ -79,7 +85,9 @@
                       [class.mat-cell]="false"
                       class="mat-header-cell"
                       *matCellDef="let mapInfo">
+
             {{ names.mapInformation[mapInfo.type] }}
+
           </mat-cell>
         </ng-container>
 
@@ -88,9 +96,9 @@
             Latitude
           </mat-header-cell>
           <mat-cell *matCellDef="let mapInfo">
-            {{ mapInfo.units === 'count' ? mapInfo.latitude :
-                mapInfo.units === 'degrees' ? (mapInfo.latitude | sharedDegrees) :
-                mapInfo.latitude + ' ' + mapInfo.units }}
+
+            {{ mapInfo.latitude | sharedUnits:mapInfo.units }}
+
           </mat-cell>
         </ng-container>
 
@@ -99,9 +107,9 @@
             Longitude
           </mat-header-cell>
           <mat-cell *matCellDef="let mapInfo">
-            {{ mapInfo.units === 'count' ? mapInfo.longitude :
-                mapInfo.units === 'degrees' ? (mapInfo.longitude | sharedDegrees) :
-                mapInfo.longitude + ' ' + mapInfo.units }}
+
+            {{ mapInfo.longitude | sharedUnits:mapInfo.units }}
+
           </mat-cell>
         </ng-container>
 
@@ -120,16 +128,27 @@
     <ng-template matExpansionPanelContent>
 
       <dl class="description-table" *ngIf="smOutput.uncertainty">
-        <ng-container *ngFor="let name of headers['uncertainty']">
 
-          <ng-container *ngIf="smOutput['uncertainty'][name]">
-            <dt>{{ names.uncertainty[name] }}</dt>
-            <dd>
-              {{ smOutput['uncertainty'][name] }}
-            </dd>
+          <ng-container *ngIf="smOutput['uncertainty']['mean_uncertainty_ratio']; let ratio">
+            <dt>Mean of map uncertainty</dt>
+            <dd>{{ ratio | sharedNumber }}</dd>
+          </ng-container>
+
+          <ng-container *ngIf="smOutput['uncertainty']['grade']; let grade">
+            <dt>Empirical ShakeMap grade</dt>
+            <dd>{{ grade }}</dd>
+          </ng-container>
+
+          <ng-container *ngIf="smOutput['uncertainty']['total_flagged_mi']; let miFlag">
+            <dt>Flagged Seismic Stations</dt>
+            <dd>{{ miFlag }}</dd>
+          </ng-container>
+
+          <ng-container *ngIf="smOutput['uncertainty']['total_flagged_pgm']; let pgmFlag">
+            <dt>Flagged DYFI stations</dt>
+            <dd>{{ pgmFlag }}</dd>
           </ng-container>
           
-        </ng-container>
       </dl>
 
     </ng-template>
