Updated tests to work with new method. Removed unused method parameter.

--- a/src/app/origin/detail/detail.component.html
+++ b/src/app/origin/detail/detail.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="eventService.event$ | async; let event">
-  <ng-container *ngIf="getProduct(event); let product">
+  <ng-container *ngIf="getProduct(); let product">
     <table *ngIf="product.properties; let props">
       <tbody>
         <tr>
