created focal mechanism summary component

--- a/src/app/technical/technical/technical.component.html
+++ b/src/app/technical/technical/technical.component.html
@@ -11,6 +11,11 @@
         [products]="event.getProducts('moment-tensor')">
     </technical-moment-tensor-summary>
 
+    <technical-focal-mechanism-summary
+        [event]="event"
+        [products]="event.getProducts('focal-mechanism')">
+    </technical-focal-mechanism-summary>
+
 
     <shared-text-product
         *ngFor="let product of event.getProducts('scitech-text')"
