--- a/src/app/executive/basic-pin/basic-pin.component.html
+++ b/src/app/executive/basic-pin/basic-pin.component.html
@@ -21,10 +21,10 @@
 
     <!-- Footer -->
     <mat-card-footer>
-      <ng-container *ngIf="subtitle; else noSubtitle">
-        {{ subtitle }}
+      <ng-container *ngIf="footer; else noFooter">
+        {{ footer }}
       </ng-container>
-      <ng-template #noSubtitle>
+      <ng-template #noFooter>
         Contributed by
         <shared-product-attribution [product]="product">
         </shared-product-attribution>
