Create attribution dl for focal mechanism page, move nodal plane table to shared

--- a/src/app/event-page/navigation/navigation.component.html
+++ b/src/app/event-page/navigation/navigation.component.html
@@ -42,7 +42,7 @@
         display="Moment Tensor"
         navRouterLink="moment-tensor"></app-navigation-item>
     <app-navigation-item *ngIf="event.hasProducts('focal-mechanism')"
-        display="Focal Mechanism" class="not-supported"
+        display="Focal Mechanism"
         navRouterLink="focal-mechanism"></app-navigation-item>
     <app-navigation-item *ngIf="event.hasProducts('finite-fault')"
         display="Finite Fault" class="not-supported"
