--- a/src/app/moment-tensor/moment-tensor/moment-tensor.component.html
+++ b/src/app/moment-tensor/moment-tensor/moment-tensor.component.html
@@ -9,7 +9,7 @@
   <div class="row" *ngIf="tensor">
     <div class="column">
       <moment-tensor-info [tensor]="tensor"></moment-tensor-info>
-      <moment-tensor-nodal-planes [tensor]="tensor"></moment-tensor-nodal-planes>
+      <shared-nodal-planes [tensor]="tensor"></shared-nodal-planes>
       <moment-tensor-axes [tensor]="tensor"></moment-tensor-axes>
     </div>
 
